--- a/stilo.css
+++ b/stilo.css
@@ -1,36 +1,60 @@
+h2{
+    font-size: 2.5em;
+    color: #263183
+}
+
 header{
     background-color: rgba(0, 255, 255, 0.24);
-    text-align: center;
+    padding: 20px 0;
 }
-.ImgLogo{
-    width: 250px;
-    transition: 0.5s;
-}
-.ImgLogoJS{
-    transition: 0.5s;
-    width: 300px;
+.topo{
+    max-width: 940px;
+    position: relative;
+    margin: 0 auto;
 }
 nav{
     position: absolute;
-    top: 140px;
-    right: 5px;
-}
-.navJs{
-    position: absolute;
-    top: 170px;
-    right: 5px;
-    transition: 0.5s;
-}
-nav a{
-    color: #5668F0;
-    font-weight: bold;
-    text-decoration: none;
-    text-transform: uppercase;
+    top: 110px;
+    right: 0;
+
 }
 nav li{
     display: inline;
-    margin: 0 15px;
+    margin: 0 0 0 15px;
+}
+nav a{
+    text-transform: uppercase;
+    color: #5668F0;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-decoration: none;
 }
 nav a:hover{
-    color: #4452BD;
+    color: #263183;
+    text-decoration: underline;
+}
+
+
+#SaibaMais {
+    margin: 25px;
+}
+.Saiba{
+    display: inline-block;
+    width: 40%;
+}
+.Saiba p{
+    font-size: 1.1em;
+}
+.ImgSaibaMais{
+    border-radius: 15px;
+    width: 40%;
+    margin-left: 100px;
+    box-shadow: 5px 5px 20px black;
+}
+footer{
+    text-align: center;
+    padding: 10px 0;
+}
+.LogoRodape{
+    width: 15%;
 }
